deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: euro-smart
  labels:
    app.kubernetes.io/part-of: euro-smart-server
